  * Project references are maintained by the JavaCore, in parallel with build path.
  * Resurrected deprecated APIs from 0.9 which were discarded previously.
  * Cross-project incremental recompilation in presence of structural changes in produced binaries.
  
  PRs Fixed in this Release
  ================================================================================
  5515      AbortCompilation during polymorphic search  
  5275      eBay Defect 186249 - OTI PR# 1GLEYT1
  5267      Dependent Projects not compiled when project is saved  
  5425      Exception on CodeAssist
  3194      DCR - JM - Buffer contents is duplicated (1G03HCP)  
  5430      Must resurrect 0.9 deprecated APIs   
  4923      IJavaProject.getPackageFragmentRoots returns roots from other projects
  3308      Projects not build in correct order after load (1GF60TN)
  3435      keeping the project references and required project in synch (1GL0L34) 
  5203      Project indexing does not restrain to source files on the classpath  
  3293      search does not work in inner class (1GEUQHJ)
  3249		Error message is confusing: using token instead of identifier (1GCTDYM) 
  5214      TVT: Apostrophe shows up multiple times in Java error messages in some translations (italian) 
  5263      TVT: Compiler error messages are hard for translators to understand
  3251      Types not included in code assist list for import (1GD06W9)
  5277      Code assist on assert method do an AbortException
  5070      search: missing interface method reference  
  5069      search: method reference in super missing  
  5068      search: missing method reference  

  PRs Closed in this Release
  ================================================================================
  5498      Java Compile - code does not compile correctly in JDT, but does with javac
  5493      Adding project references doesn't update the classpath  
  5426      CodeAssist returns empty completion