@@ -114,6 +114,8 @@ STREAM: 2.0
   
   PRs Fixed in this Release
   ================================================================================
+  5541      No refresh when adding a compilation unit inside a dot named source folder 
+  5532      Incremental compile missed a return type change
   5515      AbortCompilation during polymorphic search  
   5275      eBay Defect 186249 - OTI PR# 1GLEYT1
   5267      Dependent Projects not compiled when project is saved  
